--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,200 @@ font-family: 'Open Sans', sans-serif;
  font-size: 100%;
  background: #FFf;
 }
+html { min-height: 100%; }
+
+body { height: 100%; }
+
+
+.slideshow {
+  list-style: none;
+  z-index: 1;
+  height: 25em;
+}
+
+.slideshow li span {
+  width: 100%;
+  height: 60%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  color: transparent;
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  opacity: 0;
+  z-index: 0;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-animation: imageAnimation 24s linear infinite 0s;
+  -moz-animation: imageAnimation 24s linear infinite 0s;
+  animation: imageAnimation 24s linear infinite 0s;
+}
+
+.slideshow li h3 {
+  position: absolute;
+  text-align: center;
+  z-index: 2;
+  bottom: 120px;
+  left: 0;
+  right: 0;
+  opacity: 0;
+  font-size: 2em;
+  font-family: 'roboto', sans-serif;
+  text-transform: uppercase;
+  color: #fff;
+  -webkit-animation: titleAnimation 24s linear 1 0s;
+  -moz-animation: titleAnimation 24s linear 1 0s;
+  animation: titleAnimation 24s linear 1 0s;
+}
+@media only screen and (min-width: 768px) {
+
+.slideshow li h3 {
+  bottom: 20px;
+  font-size: 2em;
+}
+}
+@media only screen and (min-width: 1024px) {
+
+.slideshow li h3 { font-size: 2em; }
+}
+
+.slideshow li:nth-child(1) span { background-image: url(../images/MSU-MAIN\ \(1\).png); }
+
+.slideshow li:nth-child(2) span {
+  background-image: url(../images/ANNEX\ \(2\).png);
+  -webkit-animation-delay: 6s;
+  -moz-animation-delay: 6s;
+  animation-delay: 6s;
+}
+
+.slideshow li:nth-child(3) span {
+  background-image: url(../images/PUC\(3\).png);
+  -webkit-animation-delay: 12s;
+  -moz-animation-delay: 12s;
+  animation-delay: 12s;
+}
+
+.slideshow li:nth-child(4) span {
+  background-image: url(../images/FACULTY\ \(4\).png);
+  -webkit-animation-delay: 18s;
+  -moz-animation-delay: 18s;
+  animation-delay: 18s;
+}
+ @-webkit-keyframes 
+imageAnimation {  0% {
+ opacity: 0;
+ -webkit-animation-timing-function: ease-in;
+}
+ 12.5% {
+ opacity: 1;
+ -webkit-animation-timing-function: ease-out;
+}
+ 25% {
+ opacity: 1;
+}
+ 37.5% {
+ opacity: 0;
+}
+ 100% {
+ opacity: 0;
+}
+}
+@-moz-keyframes 
+imageAnimation {  0% {
+ opacity: 0;
+ -moz-animation-timing-function: ease-in;
+}
+ 12.5% {
+ opacity: 1;
+ -moz-animation-timing-function: ease-out;
+}
+ 25% {
+ opacity: 1;
+}
+ 37.5% {
+ opacity: 0;
+}
+ 100% {
+ opacity: 0;
+}
+}
+@keyframes 
+imageAnimation {  0% {
+ opacity: 0;
+ -webkit-animation-timing-function: ease-in;
+ -moz-animation-timing-function: ease-in;
+ animation-timing-function: ease-in;
+}
+ 12.5% {
+ opacity: 1;
+ -webkit-animation-timing-function: ease-out;
+ -moz-animation-timing-function: ease-out;
+ animation-timing-function: ease-out;
+}
+ 25% {
+ opacity: 1;
+}
+ 37.5% {
+ opacity: 0;
+}
+ 100% {
+ opacity: 0;
+}
+}
+@-webkit-keyframes 
+titleAnimation {  0% {
+ opacity: 0;
+}
+ 12.5% {
+ opacity: 1;
+}
+ 25% {
+ opacity: 1;
+}
+ 37.5% {
+ opacity: 0;
+}
+ 100% {
+ opacity: 0;
+}
+}
+@-moz-keyframes 
+titleAnimation {  0% {
+ opacity: 0;
+}
+ 12.5% {
+ opacity: 1;
+}
+ 25% {
+ opacity: 1;
+}
+ 37.5% {
+ opacity: 0;
+}
+ 100% {
+ opacity: 0;
+}
+}
+@keyframes 
+titleAnimation {  0% {
+ opacity: 0;
+}
+ 12.5% {
+ opacity: 1;
+}
+ 25% {
+ opacity: 1;
+}
+ 37.5% {
+ opacity: 0;
+}
+ 100% {
+ opacity: 0;
+}
+}
+
+.no-cssanimations .slideshow li span { opacity: 1; }
 body a {
 	transition:0.5s all;
 	-webkit-transition:0.5s all;
@@ -594,10 +788,14 @@ fieldset#body {
   padding: 0 16px;
 }
 .welcome {
-	padding: 0em 39px 5em;
-    text-align: center;
-    background-color: #213c21;
-    color: white;
+padding: 28em 0px 0em;
+  text-align: center;
+  background-image: url(../images/strands.png);
+  color: transparent;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+	
 }
 .welcome h2 {
 	margin-bottom: 35px;
@@ -619,7 +817,8 @@ fieldset#body {
 	span.menu {
 	   width: 35px;
   height: 35px;
-  background: url(../images/nav.png)no-repeat 0px 0px;
+  background: url(../images/nav.png)
+  no-repeat 0px 0px;
   display: inline-block;
   float: left;
   cursor: pointer;
@@ -844,11 +1043,17 @@ img.zoom-img:hover {
 /*--/news--*/
 /*-- footer --*/
 .footer{
-	padding:45em 0 0em;;
-	background:url(../images/FOOTER.png);
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center;
+	padding: 52em 0 0em;
+  background: url(../images/footer1.png);
+    background-position-x: 0%;
+    background-position-y: 0%;
+    background-repeat: repeat;
+    background-size: auto;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  margin-top: -5em;
+  width: 97em;
 }
 .footer-left ul{
 	padding:0;
@@ -956,7 +1161,7 @@ color: #FFFFFF;
 	text-decoration:none;
 }
 .copyright{
-  background: gray;
+  background: #440101;
   padding: 1em 0;
 }
 .copyright-left p{
@@ -968,14 +1173,19 @@ color: #FFFFFF;
 	color:#FFF;
 }
 .copyright-left{
-	float:left;
+	float: left;
+ 	 margin-left: -11em;
 }
 .copyright-right{
 	float:right;
 }
 .copyright-right ul{
-	padding:0;
-	margin:0;
+	padding: 0px;
+ 	margin: 0;
+    margin-top: 0px;
+    margin-right: 0px;
+  	margin-top: -21em;
+  	margin-right: 28em;
 }
 .copyright-right ul li{
 	display:inline-block;
@@ -1388,7 +1598,7 @@ ul.p_n-list li a:hover{
 /*-- .gallery__ Gallery Page Ends Here --*/
 /*-- contact --*/
 .contact{
-	padding:2em 0;
+	padding:19em 0;
 }
 .contact-info h3.c-text{
   font-size: 31px;
