Updated and Additional design

--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -5877,7 +5877,8 @@ input[type="button"].btn-block {
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
   min-height: 1px;
-  padding: 1.25rem; }
+  padding: 1.25rem; 
+}
 
 .card-title {
   margin-bottom: 0.75rem; }
@@ -12493,7 +12494,7 @@ dl {
     -webkit-transition: width 0.25s ease, background 0.25s ease;
     -moz-transition: width 0.25s ease, background 0.25s ease;
     -ms-transition: width 0.25s ease, background 0.25s ease;
-    background: #181824;
+    background-color: black;
     width: 240px;
     height: 70px;
     padding: 0 1.75rem; }
@@ -12776,7 +12777,7 @@ dl {
 /* Sidebar */
 .sidebar {
   min-height: calc(100vh - 70px);
-  background: #181824;
+  background: #000;
   font-family: "Open Sans", sans-serif;
   padding: 0;
   width: 240px;
@@ -13025,7 +13026,7 @@ dl {
 
 .content-wrapper {
   background: white;
-  padding: 2.75rem 1.5rem 0;
+  padding: 5.75rem 1.5rem 0;
   width: 100%;
   -webkit-box-flex: 1;
   -ms-flex-positive: 1;
