--- a/faculty-hybrid/style.css
+++ b/faculty-hybrid/style.css
@@ -12493,7 +12493,7 @@ dl {
     -webkit-transition: width 0.25s ease, background 0.25s ease;
     -moz-transition: width 0.25s ease, background 0.25s ease;
     -ms-transition: width 0.25s ease, background 0.25s ease;
-    background: #181824;
+    background: black;
     width: 240px;
     height: 70px;
     padding: 0 1.75rem; }
@@ -12544,13 +12544,14 @@ dl {
     -webkit-transition: width 0.25s ease;
     -moz-transition: width 0.25s ease;
     -ms-transition: width 0.25s ease;
-    color: #111111;
+    color: white;
     padding-left: 24px;
     padding-right: 24px;
     width: calc(100% - 240px);
     height: 70px;
     -webkit-box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.11);
-    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.11); }
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.11);
+  background-color: #ac8b3a; }
     @media (max-width: 991px) {
       .navbar .navbar-menu-wrapper {
         width: auto;
@@ -12776,7 +12777,7 @@ dl {
 /* Sidebar */
 .sidebar {
   min-height: calc(100vh - 70px);
-  background: #181824;
+  background: black;
   font-family: "Open Sans", sans-serif;
   padding: 0;
   width: 240px;
