--- a/user/css/style.css
+++ b/user/css/style.css
@@ -12544,13 +12544,14 @@ dl {
     -webkit-transition: width 0.25s ease;
     -moz-transition: width 0.25s ease;
     -ms-transition: width 0.25s ease;
-    color: #111111;
+    color: white;
     padding-left: 24px;
     padding-right: 24px;
     width: calc(100% - 240px);
     height: 70px;
     -webkit-box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.11);
-    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.11); }
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.11);
+  background-color: #26263d; }
     @media (max-width: 991px) {
       .navbar .navbar-menu-wrapper {
         width: auto;
