Added the Print Function

--- a/user/css/style.css
+++ b/user/css/style.css
@@ -118,6 +118,9 @@
   footer {
     display: none !important;
   }
+  .print-button{
+    display: none !important;
+  }
 }
 @-webkit-keyframes flash {
   0% {
