--- a/lis-coordinator/css/style.css
+++ b/lis-coordinator/css/style.css
@@ -12551,7 +12551,7 @@ dl {
     height: 70px;
     -webkit-box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.11);
     box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.11); 
-  background-color: goldenrod;}
+    background-color: #7c201c;}
     @media (max-width: 991px) {
       .navbar .navbar-menu-wrapper {
         width: auto;
