--- a/teacher-aide/css/style.css
+++ b/teacher-aide/css/style.css
@@ -12539,19 +12539,20 @@ dl {
       .sidebar-icon-only .navbar .navbar-brand-wrapper .navbar-toggler {
         margin-right: auto;
         margin-left: auto; }
-  .navbar .navbar-menu-wrapper {
-    transition: width 0.25s ease;
-    -webkit-transition: width 0.25s ease;
-    -moz-transition: width 0.25s ease;
-    -ms-transition: width 0.25s ease;
-    color: white;
-    padding-left: 24px;
-    padding-right: 24px;
-    width: calc(100% - 240px);
-    height: 70px;
-    -webkit-box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.11);
-    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.11); 
-  background-color: goldenrod;}
+        .navbar .navbar-menu-wrapper {
+          transition: width 0.25s ease;
+          -webkit-transition: width 0.25s ease;
+          -moz-transition: width 0.25s ease;
+          -ms-transition: width 0.25s ease;
+          color: white;
+          padding-left: 24px;
+          padding-right: 24px;
+          width: calc(100% - 240px);
+          height: 70px;
+          -webkit-box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.11);
+          box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.11);
+          background-color: #7c201c;
+        }
     @media (max-width: 991px) {
       .navbar .navbar-menu-wrapper {
         width: auto;
